fix(tooltip): z-index

--- a/src/global/css/_tooltip.scss
+++ b/src/global/css/_tooltip.scss
@@ -14,6 +14,7 @@
     visibility: hidden;
     position: absolute;
     left: 50%;
+    z-index: 1;
     transform: translateX(-50%);
     transition: $default-transition;
     opacity: 0;
